--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             const setButawarna = props.setButawarna;
 
             const options = [
-                ["Buta Warna", "Buta Warna"],
+                ["Iya Buta Warna", "Iya Buta Warna"],
                 ["Tidak Buta Warna", "Tidak Buta Warna"]
             ];
 
