--- a/index.html
+++ b/index.html
@@ -485,7 +485,10 @@
 
             const options = [
                 ["Tidak Minus", "Tidak Minus"],
-                ["Tidak Buta Warna", "Tidak Buta Warna"]
+                ["Minus < 1", "Minus < 1"],
+                ["Minus 1-4", "Minus 1-4"],
+                ["Minus 4-6", "Minus 4-6"],
+                ["Minus > 6", "Minus > 6"]
             ];
 
 
