memperbaiki alur tombol kembali

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             }
 
             function Button1() {
-                return <button onClick={() => showPage("home")} className="btn btn-primary">Kembali</button>
+                return <button onClick={() => showPage("berapa-minus")} className="btn btn-primary">Kembali</button>
             }
 
             function Result() {
@@ -384,7 +384,7 @@
             }
 
             function Button1() {
-                return <button onClick={() => props.showPage("home")} className="btn btn-primary">Kembali</button>
+                return <button onClick={() => props.showPage("cek-kedinasan-sekolah")} className="btn btn-primary">Kembali</button>
             }
 
             function Button2() {
