mencoba mengisi informasi ipdn

--- a/index.html
+++ b/index.html
@@ -534,6 +534,8 @@
             IPDN: (props) => {
                 return (
                     <React.Fragment>
+                        <h6>Berdasarkan hasil yang Anda pilih, maka IPDN adalah salah satu yang tepat untuk Anda</h6>
+                        <p>IPDN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 3 dari yang lainnya.</p>
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-ipdn"} showPage={props.showPage} />} />
                     </React.Fragment>
                 )
