melanjutkan footer, dan kurang satu lagi

--- a/index.html
+++ b/index.html
@@ -538,12 +538,24 @@
                 },
                 Footer: props => {
                     return (
-                        <div class="alert alert-secondary" role="alert">
-                            <ul class="list-group">
-                                <li class="list-group-item">Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</li>
-                                <li class="list-group-item">Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</li>
-                            </ul>
-                        </div>
+                        <React.Fragment>
+                            <div class="alert alert-light" role="alert">
+                                <ul class="list-group">
+                                    <li class="list-group-item">Maka dari itu, jika Anda adalah orang yang bekerja keras, fisik cukup bagus, nilai diatas rata - rata. Sekolah Kedinasan Poltekim adalah pilihan yang tepat</li>
+                                    <li class="list-group-item">Rekomendasi untuk bimbel Panara Course adalah paket yang </li>
+                                    <li class="list-group-item">Mengingat persaingan masuk Poltekim sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
+                                    <li class="list-group-item">Cek fasilitas bimbingan belajar jika kalian memilih</li>
+                                    <li class="list-group-item">Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</li>
+                                </ul>
+                            </div>
+
+                            <div class="alert alert-secondary" role="alert">
+                                <ul class="list-group">
+                                    <li class="list-group-item">Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</li>
+                                    <li class="list-group-item">Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</li>
+                                </ul>
+                            </div>
+                        </React.Fragment>
                     )
                 }
             },
