mengisi teks di STAN

--- a/index.html
+++ b/index.html
@@ -573,8 +573,9 @@
             STAN: (props) => {
                 return (
                     <React.Fragment>
-                        <h6>Berdasarkan hasil yang Anda pilih, maka IPDN adalah salah satu yang tepat untuk Anda</h6>
-                        <p>IPDN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 3 dari yang lainnya.</p>
+                        <h6>Berdasarkan hasil yang Anda pilih, maka STAN adalah salah satu yang tepat untuk Anda</h6>
+                        <p>STAN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 7 dari yang lainnya. </p>
+                        <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 2.15 % dan jumlah yang daftar adalah 51.136</p>
 
                         <Pages.Informasi.Partials.Footer />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-ipdn"} showPage={props.showPage} />} />
