--- a/index.html
+++ b/index.html
@@ -537,13 +537,14 @@
                     return <button onClick={() => showPage(page)} className="btn btn-primary">Kembali</button>
                 },
                 Footer: props => {
+                    const persainganMasuk = props.persainganMasuk;
                     return (
                         <React.Fragment>
                             <div class="alert alert-light" role="alert">
                                 <ul class="list-group">
                                     <li class="list-group-item">Maka dari itu, jika Anda adalah orang yang bekerja keras, fisik cukup bagus, nilai diatas rata - rata. Sekolah Kedinasan Poltekim adalah pilihan yang tepat</li>
                                     <li class="list-group-item">Rekomendasi untuk bimbel Panara Course adalah paket yang </li>
-                                    <li class="list-group-item">Mengingat persaingan masuk Poltekim sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
+                                    <li class="list-group-item">Mengingat persaingan masuk <b>{persainganMasuk}</b> sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
                                     <li class="list-group-item">Cek fasilitas bimbingan belajar jika kalian memilih</li>
                                     <li class="list-group-item">Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</li>
                                 </ul>
@@ -564,7 +565,7 @@
                     <React.Fragment>
                         <h6>Berdasarkan hasil yang Anda pilih, maka IPDN adalah salah satu yang tepat untuk Anda</h6>
                         <p>IPDN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 3 dari yang lainnya.</p>
-                        <Pages.Informasi.Partials.Footer />
+                        <Pages.Informasi.Partials.Footer persainganMasuk="IPDN" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-ipdn"} showPage={props.showPage} />} />
                     </React.Fragment>
                 )
@@ -577,7 +578,7 @@
                         <p>STAN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 7 dari yang lainnya. </p>
                         <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 2.15 % dan jumlah yang daftar adalah 51.136</p>
 
-                        <Pages.Informasi.Partials.Footer />
+                        <Pages.Informasi.Partials.Footer persainganMasuk="STAN" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-ipdn"} showPage={props.showPage} />} />
                     </React.Fragment>
                 )
