--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <Partials.Header text="Aplikasi Pintar Pemilihan Sekolah Kedinasan" />
                     <p>Tentukan Sekolah Kedinasan mu secara tepat dengan software rekomendasi ini !!!</p>
 
-                    <div class="container">
+                    <div className="container">
                         <h6>Untuk Tahap Pengembangan</h6>
                         <button onClick={() => props.showPage("ipdn")}>IPDN</button>
                         <button onClick={() => props.showPage("stan")}>STAN</button>
@@ -313,6 +313,18 @@
             const butaWarna = props.butaWarna;
             const minus = props.minus;
 
+            // Variabel ini akan berubah-ubah nanti saat seleksi
+            let schools = [];
+            let blindEye = [];
+
+            // blindEye = [
+            //         "Tidak Minus",
+            //         "Minus < 1",
+            //         "Minus 1-4",
+            //         "Minus 4 - 6",
+            //         "Minus > 6",
+            //     ];
+
             function ButtonCek(props) {
                 return <button onClick={() => showPage(props.page)} className="btn btn-primary">Cek</button>
             }
@@ -333,9 +345,33 @@
             }
 
             function Result() {
+                // IPDN
+                let booleanIPDN = true;
+                schools = [
+                    "SMA IPA",
+                    "SMA IPS",
+                    "SMA JURUSAN LAINNYA",
+                    "MA IPA",
+                    "MA IPS",
+                    "MA ILMU KEAGAMAAN",
+                    "MA BAHASA",
+                    "MA JURUSAN LAIN",
+                    "SMK TEKNIK INFORMATIKA/KOMPUTER",
+                    "SMK TEKNIK ELEKTRONIKA",
+                    "SMK JURUSAN LAINNYA"
+                ];
+                blindEye = [
+                    "Tidak Minus",
+                    "Minus < 1"
+                ];
+
+                booleanIPDN &= schools.includes(sekolah) ? true : false;
+                booleanIPDN &= "Tidak Buta Warna" === butaWarna ? true : false;
+                booleanIPDN &= blindEye.includes(minus) ? true : false;
+
                 return (
                     <React.Fragment>
-                        <ListItem title="IPDN" page="cek-ipdn" />
+                        {booleanIPDN ? <ListItem title="IPDN" page="cek-ipdn" /> : ""}
                         <ListItem title="STAN" page="cek-stan" />
                         <ListItem title="POLTEKIP/POLTEKIM" page="cek-piltekip-poltekim" />
                         <ListItem title="POLTEK SSN" page="cek-ssn" />
@@ -366,7 +402,7 @@
                             Sekolah Kedinasan Yang Cocok Untuk Kamu
                         </div>
                         <ul className="list-group list-group-flush">
-                            {true ? (
+                            {sekolah && butaWarna && minus ? (
                                 <Result />
                             ) : (
                                 <div className="alert alert-warning text-center" role="alert">
@@ -564,35 +600,35 @@
                     const persainganMasuk = props.persainganMasuk;
                     return (
                         <React.Fragment>
-                            <div class="container card p-2 mb-3">
-                                <div class="row">
-                                    <div class="col-4">
+                            <div className="container card p-2 mb-3">
+                                <div className="row">
+                                    <div className="col-4">
                                         <button type="button" className="btn btn-danger" disabled>Alert!!!</button>
                                     </div>
 
-                                    <div class="col-4">
+                                    <div className="col-4">
                                         <b><u>Tingkat persaingan 1:57</u></b>
                                     </div>
 
-                                    <div class="col-4">
+                                    <div className="col-4">
                                         <b>Cek perbandingan tingkat persaingan masuk Sekolah Kedinasan <button onClick={() => props.showPage("cek-kedinasan-sekolah")} className="btn btn-primary">Disini</button></b>
                                     </div>
                                 </div>
                             </div>
-                            <div class="alert alert-light" role="alert">
-                                <ul class="list-group">
-                                    <li class="list-group-item">Maka dari itu, jika Anda adalah orang yang bekerja keras, fisik cukup bagus, nilai diatas rata - rata. Sekolah Kedinasan Poltekim adalah pilihan yang tepat</li>
-                                    <li class="list-group-item">Rekomendasi untuk bimbel Panara Course adalah paket yang </li>
-                                    <li class="list-group-item">Mengingat persaingan masuk <b>{persainganMasuk}</b> sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
-                                    <li class="list-group-item">Cek fasilitas bimbingan belajar jika kalian memilih</li>
-                                    <li class="list-group-item">Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</li>
+                            <div className="alert alert-light" role="alert">
+                                <ul className="list-group">
+                                    <li className="list-group-item">Maka dari itu, jika Anda adalah orang yang bekerja keras, fisik cukup bagus, nilai diatas rata - rata. Sekolah Kedinasan Poltekim adalah pilihan yang tepat</li>
+                                    <li className="list-group-item">Rekomendasi untuk bimbel Panara Course adalah paket yang </li>
+                                    <li className="list-group-item">Mengingat persaingan masuk <b>{persainganMasuk}</b> sangat ketat, maka perlu sangat intensive belajar SKD dan Psikologi di Program VIP Offline</li>
+                                    <li className="list-group-item">Cek fasilitas bimbingan belajar jika kalian memilih</li>
+                                    <li className="list-group-item">Apabila ingin bergabung pada paket di atas atau melihat perbandingannya dengan paket bimbel lainnya</li>
                                 </ul>
                             </div>
 
-                            <div class="alert alert-secondary" role="alert">
-                                <ul class="list-group">
-                                    <li class="list-group-item">Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</li>
-                                    <li class="list-group-item">Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</li>
+                            <div className="alert alert-secondary" role="alert">
+                                <ul className="list-group">
+                                    <li className="list-group-item">Untuk informasi lebih lanjut mengenai bimbingan belajar tersebut dapat mengunjungi laman website berikut ini</li>
+                                    <li className="list-group-item">Anda juga dapat berkonsultasi dengan admin kami melalui kontak berikut ini</li>
                                 </ul>
                             </div>
                         </React.Fragment>
