--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
             const options = [
                 ["Tidak Minus", "Tidak Minus"],
                 ["Minus < 1", "Minus < 1"],
-                ["Minus 1-4", "Minus 1-4"],
-                ["Minus 4-6", "Minus 4-6"],
+                ["Minus 1 - 4", "Minus 1 - 4"],
+                ["Minus 4 - 6", "Minus 4 - 6"],
                 ["Minus > 6", "Minus > 6"]
             ];
 
